--- a/semana-03/style.css
+++ b/semana-03/style.css
@@ -177,16 +177,13 @@ main{
     position:absolute;
     top:30px;
     left:80px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
     font-size: 14px;
-    line-height: 30px;
+    line-height: 25px;
 }
 
 #why{
     position: relative;
-    height: 400px;
+    height: 350px;
     border-bottom: 1px solid gray;
 }
 
@@ -225,20 +222,22 @@ main{
 
 #help{
     position: relative;
-    height: 350px;
+    height: 400px;
+    border-bottom: 1px solid gray;
 }
 
 #help h2{
     position: absolute;
     left: 73px;
     font-size: 30px;
+    top: 25px;
 }
 
 .controls{
     width: 500px;
     height: 30px;
     display: inline;
-    margin-top: 50px;
+    margin-top: 92px;
     margin-left: 10px;
     border-radius: 3px;
 
@@ -262,7 +261,7 @@ main{
     margin-left: 10px;
 }
 #help .btn{
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .btn-orange{
@@ -273,6 +272,7 @@ main{
 #history{
     position: relative;
     height: 400px;
+    border-bottom: 1px solid gray;
 }
 
 #history h2{
