--- a/semana-04/css/header.css
+++ b/semana-04/css/header.css
@@ -1,27 +1,36 @@
-header{
-    clear: both;
+
+header{ 
     width: 100%;
-    height: 100px;
+    height: 70px;
     background: #FFFFFF;
     box-shadow: 0px 4px 0px #FF5500;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
 }
 
 h1{
-    position: absolute;
-    width: 272px;
-    height: 54px;
-    left: 100px;
-    top: 20px;
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 54px;
-    color: #000000;
+    
+   
 }
 
 .hamb{
-    position: absolute;
-    font-size: 30px;
-    left: 30px;
-    top: 35px;
+    font-size: 20px;
+    margin-left: 15px;
     color: #FF5500;
+}
+.iconlist{
+    
+}
+
+.icon{
+    display: inline-block;
+    
+}
+
+.icon i{
+    display: none;
+    color: black;
+    
 }
