--- a/semana-04/css/footer.css
+++ b/semana-04/css/footer.css
@@ -1,27 +1,20 @@
-footer{
-    position:relative;
-    clear:both;
+footer{ 
     width: 100%;
-    height: 100px;
-    background: #FFFFFF;
-    border-top: 5px solid #FF5500;
+    height: 70px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    border-top: 3px solid #FF5500;
 }
 footer p{
-    position: absolute;
-left: 480px;
-top: 50px;
 }
 .foot-l{
-    position:absolute;
-    height: 20px;
-    top: 10px;
-    right: 590px;
+    margin-top: 20px;
 }
 .foot-i{
     display: inline-block;
-    margin-right: 5px;
 }
 .foot-i a{
     color: black;
-    margin-right: 20px;
 }
