--- a/semana-04/css/header.css
+++ b/semana-04/css/header.css
@@ -2,22 +2,21 @@
 header{ 
     width: 100%;
     height: 70px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 0px #FF5500;
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
     flex-direction: row;
+    border-bottom: 3px solid #FF5500;
 }
 
 h1{
-    
-   
+    font-size: 20px;
 }
 
 .hamb{
     font-size: 20px;
-    margin-left: 15px;
+    margin-right: 25px;
+    margin-left: 10px;
     color: #FF5500;
 }
 .iconlist{
