--- a/semana-04/css/sidebar.css
+++ b/semana-04/css/sidebar.css
@@ -38,3 +38,9 @@ nav p{
     width: 254px;
     margin-top: 20px;
 }
+
+@media screen and (min-width: 900px) {
+    nav{
+        display: block;
+    }
+}
