--- a/semana-04/css/header.css
+++ b/semana-04/css/header.css
@@ -1,16 +1,11 @@
 
 header{ 
     width: 100%;
-    height: 70px;
+    height: 100px;
     display: flex;
     justify-content: start;
-    align-items: center;
     flex-direction: row;
     border-bottom: 3px solid #FF5500;
-}
-
-h1{
-    font-size: 20px;
 }
 
 .hamb{
@@ -18,18 +13,43 @@ h1{
     margin-right: 25px;
     margin-left: 10px;
     color: #FF5500;
+    display: inline;
 }
-.iconlist{
-    
+
+.htitle{
+    display: flex;
+    align-items: center;
 }
 
 .icon{
-    display: inline-block;
-    
+    display: inline-block;    
 }
 
 .icon i{
-    display: none;
-    color: black;
-    
+    display: none; 
+}
+
+@media screen and (min-width: 481px){
+    .icon i{
+        display: block;
+        width: 100%;
+        font-size: 20px; 
+        margin-left: 10px;
+        
+    }
+
+    .htitle{
+        display: flex;
+        align-items: center;
+    }
+
+    header{
+        justify-content: space-between;
+    }
+
+    .iconlist{
+        display: inline-block;
+        margin-right: 15px;
+        margin-top: 60px;
+    }
 }
