--- a/semana-04/css/styles.css
+++ b/semana-04/css/styles.css
@@ -1,24 +1,37 @@
+h1{
+    font-size: 30px;
+    width: 100%;
+}
+
 body{
     font-family: sans-serif;
     font-size : 15px;
 }
+
 h2{
-    font-size: 30px;
+    font-size: 25px;
     margin-top: 20px;
 }
+
 p{
     font-family: sans-serif;
     font-weight: 400;
     font-size: 15px;
     line-height: 30px;
 }
+
 h3{
-    font-weight: 500;
     font-size: 20px;
     line-height: 30px; 
 }
+
 #functionalities p{
     font-weight: 300;
-    font-size: 10px;
+    font-size: 13px;
     line-height: 15px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
 }
