--- a/semana-04/css/styles.css
+++ b/semana-04/css/styles.css
@@ -1,23 +1,15 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
 h1{
     font-size: 30px;
     width: 100%;
 }
 
-body{
-    font-family: sans-serif;
-    font-size : 15px;
-}
-
 h2{
     font-size: 25px;
     margin-top: 20px;
-}
-
-p{
-    font-family: sans-serif;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 30px;
+    margin-bottom: 15px;
 }
 
 h3{
