--- a/semana-04/css/main.css
+++ b/semana-04/css/main.css
@@ -1,8 +1,8 @@
 main{
     display: flex;
     flex-direction: column;
-    padding: 35px;
     justify-content: center;
+    padding: 35px;
 }
 
 /*  WHAT IS */
@@ -39,6 +39,7 @@ main{
     color: #FF5500;
     background-color: #FFFFFF;
     text-decoration: none;
+    text-align: center;
 }
 
 /*  FUCTIONALITIES */
@@ -48,10 +49,10 @@ main{
 }
 
 #fun-list{
-    margin: 30px 0px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin: 30px 0px;
 }
 
 .fun-item{
@@ -95,9 +96,9 @@ main{
 }
 
 .controls{
-    border-radius: 3px;
     Width: 100%;
     Height: 37px;
+    border-radius: 3px;    
     margin-top: 15px;
 }
 
@@ -124,6 +125,7 @@ main{
 
 #help .btn{
     margin-top: 15px;
+    width: 90px;
 }
 
 .btn-orange{
@@ -137,6 +139,7 @@ main{
     display: flex;
     flex-direction: column;
 }
+
 #history img{
     width: 100%;
     order: 0;
@@ -151,10 +154,8 @@ main{
     margin-top: 10px;
 }
 
-
-
-
 @media screen and (min-width: 481px){
+
     main{
         width: 70%;
     }
@@ -182,6 +183,7 @@ main{
         font-size: 50px;
         gap: 20px;
     }
+
     .fun-item i{
         width: 10%;
     }
@@ -212,8 +214,8 @@ main{
     }
     
     #what-is img{
-        margin-bottom: 20px;
         width: 100%;
+        margin-bottom: 20px;
     }
 
     .what-info{
