--- a/semana-04/css/main.css
+++ b/semana-04/css/main.css
@@ -64,6 +64,7 @@ main{
 #why{
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
     border-bottom: 1px solid gray;
 }
 
@@ -88,6 +89,7 @@ main{
 #help{
     display: flex;
     flex-direction: column;
+    border-bottom: 1px solid gray;
 }
 
 #help form{
@@ -98,8 +100,7 @@ main{
 .controls{
     Width: 100%;
     Height: 37px;
-    border-radius: 3px;    
-    margin-top: 15px;
+    border-radius: 3px;
 }
 
 #help select {
@@ -138,21 +139,27 @@ main{
 #history{
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: ;
+    border-bottom: 1px solid gray;
 }
 
 #history img{
     width: 100%;
     order: 0;
+    margin-bottom: 15px;
 }
 
 #history div{
     order: 1;
-    margin: 20px 0px;
 }
 
 #history div p{
     margin-top: 10px;
+    margin-bottom: 15px;
 }
+
+margin-top: 10px;
 
 @media screen and (min-width: 481px){
 
